--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ ignore-workspace-root-check=true
 shell-emulator=true
 public-hoist-pattern[]=*vite*
 public-hoist-pattern[]=*eslint*
+public-hoist-pattern[]=*@vue*
