--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "esnext",
     "lib": ["esnext"],
     "moduleResolution": "node",
-    "types": ["node", "vitest/globals"],
+    "types": ["node"],
     "esModuleInterop": true,
     "strict": true,
     "strictNullChecks": true,
