--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -11,6 +11,8 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@resvg/resvg-js": "^2.4.1",
+    "@types/node": "^18.15.3",
     "tsx": "^3.12.5",
     "x-satori": "workspace:*"
   }
