--- a/examples/vue/tsconfig.json
+++ b/examples/vue/tsconfig.json
@@ -4,6 +4,7 @@
     // Enable top-level await, and other modern ESM features.
     "target": "ESNext",
     "module": "ESNext",
+    "types": ["node"],
     // Enable node-style module resolution, for things like npm package imports.
     "moduleResolution": "node",
     // Enable JSON imports.
