chore: update config

--- a/.czrc
+++ b/.czrc
@@ -2,11 +2,13 @@
   "$schema": "https://cdn.jsdelivr.net/gh/Zhengqbbb/cz-git@1.6.0/docs/public/schema/cz-git.json",
   "path": "node_modules/cz-git",
   "scopes": [
+    "vue",
+    "astro",
+    "core",
     "cli",
-    "docs",
-    "script",
-    "utils",
-    "config"
+    "example",
+    "playground",
+    "script"
   ],
   "alias": {
     "f": "docs: fix typos",
