--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "x-satori",
   "type": "module",
   "version": "0.0.4",
-  "description": "use Vue files to generate SVG images using Satori",
+  "description": "Use Vue files to generate SVG images using Satori",
   "author": "Q.Ben Zheng <zhengqbbb@gmail.com> (https://github.com/Zhengqbbb/)",
   "license": "MIT",
   "homepage": "https://github.com/Zhengqbbb/x-satori#readme",
