--- a/examples/run-esm-script/package.json
+++ b/examples/run-esm-script/package.json
@@ -8,12 +8,12 @@
     "gen:png": "tsx gen-png.mts"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@resvg/resvg-js": "^2.4.1",
-    "@types/node": "^18.15.11",
-    "tsx": "^3.12.6",
-    "x-satori": "workspace:*"
+    "@types/node": "^18.16.13",
+    "tsx": "^3.12.7",
+    "x-satori": "0.1.3"
   }
 }
