--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,2 @@
-# These are supported funding model platforms
-
-custom:
-  - https://www.paypal.com/paypalme/qbbsh
+github: [Zhengqbbb]
+custom: [https://afdian.net/a/qbbsh]
