feat(core): upgrade core dep `satori` to `0.10.14`

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,14 +6,6 @@ indent_size = 4
 end_of_line = lf
 insert_final_newline = true
 
-[*.vue]
-indent_size = 2
-tab_width = 2
-
-[*.json]
-indent_size = 2
-tab_width = 2
-
 [.x-cmd/**]
 indent_size = 4
 tab_width = 4
@@ -22,7 +14,7 @@ tab_width = 4
 indent_size = 4
 tab_width = 4
 
-[*.yml]
-tab_width = 4
-indent_size = 4
+[*.{json,yml,yaml}]
+tab_width = 2
+indent_size = 2
 indent_style = space
