--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "x-satori",
   "type": "module",
   "version": "0.1.5",
-  "packageManager": "pnpm@8.6.10",
+  "packageManager": "pnpm@9.5.0",
   "description": "Use Vue files to generate SVG images using Satori",
   "author": "Q.Ben Zheng <zhengqbbb@gmail.com> (https://github.com/Zhengqbbb/)",
   "license": "MIT",
@@ -28,6 +28,10 @@
       "types": "./dist/vue.d.ts",
       "import": "./dist/vue.mjs"
     },
+    "./astro": {
+      "types": "./dist/astro.d.ts",
+      "import": "./dist/astro.mjs"
+    },
     "./package.json": "./package.json"
   },
   "main": "./dist/index.mjs",
@@ -44,8 +48,8 @@
     "x-satori": "bin/x-satori.mjs"
   },
   "files": [
-    "dist",
-    "bin"
+    "bin",
+    "dist"
   ],
   "engines": {
     "node": ">=14"
@@ -54,50 +58,60 @@
     "x": "x-satori",
     "dev": "unbuild --stub",
     "build": "unbuild && cpx src/yoga.wasm dist",
-    "cz": "czg",
     "lint": "eslint .",
     "prepare": "simple-git-hooks && cpx node_modules/yoga-wasm-web/dist/yoga.wasm src",
     "prepack": "npm run build",
     "release": "run-s release:bump release:publish",
     "release:bump": "bumpp -y -c 'build: :bookmark: publish v%s'",
     "release:publish": "pnpm publish",
-    "demo:dev": "pnpm -C playground dev",
-    "demo:build": "pnpm -C playground build",
-    "gen:svg": "pnpm -C examples/run-esm-script gen:svg",
-    "gen:png": "pnpm -C examples/run-esm-script gen:png"
+    "demo:vue:dev": "pnpm -C playground/vue dev",
+    "demo:vue:build": "pnpm -C playground/vue build",
+    "demo:astro:dev": "pnpm -C playground/astro dev",
+    "demo:astro:build": "pnpm -C playground/astro build",
+    "gen:vue:svg": "pnpm -C examples/vue-run-esm-script gen:svg",
+    "gen:vue:png": "pnpm -C examples/vue-run-esm-script gen:png",
+    "gen:astro:svg": "pnpm -C examples/astro-run-esm-script gen:svg",
+    "gen:astro:png": "pnpm -C examples/astro-run-esm-script gen:png",
+    "cz": "czg"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "esbuild": "^0.23.0",
+    "h3": "^1.12.0",
     "minimist": "^1.2.8",
-    "satori": "^0.10.4",
+    "satori": "^0.10.14",
     "satori-html": "^0.3.2",
     "yoga-wasm-web": "^0.3.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.40.0",
-    "@types/express": "^4.17.17",
-    "@types/express-serve-static-core": "^4.17.35",
-    "@types/minimist": "^1.2.2",
-    "@types/node": "^18.17.1",
-    "bumpp": "^9.1.1",
-    "cpx2": "^4.2.3",
-    "czg": "^1.7.0",
-    "eslint": "^8.46.0",
-    "lint-staged": "^13.2.3",
+    "@antfu/eslint-config": "^2.22.0",
+    "@types/minimist": "^1.2.5",
+    "@types/node": "^20.14.10",
+    "astro": "^4.11.5",
+    "bumpp": "^9.4.1",
+    "cpx2": "^7.0.1",
+    "czg": "^1.9.3",
+    "eslint": "^9.6.0",
+    "eslint-plugin-astro": "^1.2.3",
+    "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
-    "pathe": "^1.1.1",
-    "pnpm": "^8.6.10",
-    "simple-git-hooks": "^2.9.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.6",
-    "unbuild": "^1.2.1",
-    "vite": "^4.4.8",
-    "vue": "^3.3.4",
+    "pathe": "^1.1.2",
+    "pnpm": "^9.5.0",
+    "simple-git-hooks": "^2.11.1",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3",
+    "unbuild": "^2.0.0",
+    "vite": "^5.3.3",
+    "vue": "^3.4.31",
     "x-satori": "workspace:*"
   },
   "pnpm": {
     "overrides": {
       "x-satori": "workspace:*"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "eslint": "9"
+      }
     }
   },
   "simple-git-hooks": {
