feat(astro): inital transform .astro file

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,4 @@ shell-emulator=true
 public-hoist-pattern[]=*vite*
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*@vue*
+public-hoist-pattern[]=*@astro*
