--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "keywords": [
     "satori",
     "vue-satori",
+    "astro-satori",
     "v-satori",
+    "satori-astro",
     "cli"
   ],
   "exports": {
@@ -76,7 +78,6 @@
   },
   "dependencies": {
     "esbuild": "^0.23.0",
-    "h3": "^1.12.0",
     "minimist": "^1.2.8",
     "satori": "^0.10.14",
     "satori-html": "^0.3.2",
