--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "eslint": "^9.6.0",
     "eslint-plugin-astro": "^1.2.3",
     "lint-staged": "^15.2.7",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.2.2",
     "pathe": "^1.1.2",
     "pnpm": "^9.5.0",
     "simple-git-hooks": "^2.11.1",
