--- a/examples/vue-run-esm-script/package.json
+++ b/examples/vue-run-esm-script/package.json
@@ -2,6 +2,7 @@
   "name": "demo-vue",
   "type": "module",
   "version": "1.0.0",
+  "private": true,
   "description": "use Vue file to generate Open Graph SVG or PNG by satori",
   "scripts": {
     "gen:svg": "tsx gen-svg.mts",
