--- a/playground/astro/package.json
+++ b/playground/astro/package.json
@@ -2,6 +2,7 @@
   "name": "demo-astro",
   "type": "module",
   "version": "1.0.0",
+  "private": true,
   "description": "use Astro file to generate Open Graph SVG or PNG by satori. Run script or use CLI",
   "scripts": {
     "dev": "  x-satori -t ./Template.astro -c ./config.ts --dev",
