--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -2,6 +2,7 @@
   "name": "playground-x-satori",
   "type": "module",
   "version": "1.0.0",
+  "private": true,
   "description": "use Vue file to generate Open Graph SVG or PNG by satori. Run script or use CLI",
   "scripts": {
     "dev": "  x-satori -t ./Template.vue -c ./config.ts --dev",
