fix(cli): use tsup replace unbuild

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "x-satori",
   "type": "module",
-  "version": "0.2.0-beta.4",
+  "version": "0.2.0-beta.5",
   "packageManager": "pnpm@9.5.0",
   "description": "use Vue or Astro file to generate SVG image using Satori",
   "author": "Q.Ben Zheng <zhengqbbb@gmail.com> (https://github.com/Zhengqbbb/)",
@@ -59,14 +59,15 @@
   },
   "scripts": {
     "x": "x-satori",
-    "dev": "unbuild --stub",
-    "build": "unbuild && cpx src/yoga.wasm dist",
+    "dev": "tsup --watch",
+    "build": "tsup",
     "lint": "eslint .",
     "prepare": "simple-git-hooks && cpx node_modules/yoga-wasm-web/dist/yoga.wasm src",
-    "prepack": "npm run build",
+    "prepack": "run-s lint build",
     "release": "run-s release:bump release:publish",
     "release:bump": "bumpp -y -c 'build: :bookmark: publish v%s'",
     "release:publish": "pnpm publish",
+    "release:next": "bumpp --no-commit --no-push --no-tag && pnpm publish --tag next --no-git-checks",
     "demo:vue:dev": "pnpm -C playground/vue dev",
     "demo:vue:build": "pnpm -C playground/vue build",
     "demo:astro:dev": "pnpm -C playground/astro dev",
@@ -100,9 +101,9 @@
     "pnpm": "^9.5.0",
     "resvg-cli": "^2.6.2",
     "simple-git-hooks": "^2.11.1",
+    "tsup": "^8.2.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
-    "unbuild": "^2.0.0",
     "vite": "^5.3.3",
     "vue": "^3.4.31",
     "x-satori": "workspace:*"
