--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "**/.x-cmd/*": "shellscript",
     "**/.x-cmd/*.yml": "yaml",
     "*.css": "postcss",
+    ".czrc": "json",
     "_headers": "properties",
     "_redirects": "properties"
   },
