feat(playground): initial astro playground

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "x-satori",
   "type": "module",
-  "version": "0.2.0-beta.7",
+  "version": "0.2.0-beta.8",
   "packageManager": "pnpm@9.5.0",
   "description": "use Vue or Astro file to generate SVG image using Satori",
   "author": "Q.Ben Zheng <zhengqbbb@gmail.com> (https://github.com/Zhengqbbb/)",
@@ -68,10 +68,10 @@
     "release:bump": "bumpp -y -c 'build: :bookmark: publish v%s'",
     "release:publish": "pnpm publish",
     "release:next": "bumpp --no-commit --no-push --no-tag && pnpm publish --tag next --no-git-checks",
-    "demo:vue:dev": "pnpm -C playground/vue dev",
-    "demo:vue:build": "pnpm -C playground/vue build",
-    "demo:astro:dev": "pnpm -C playground/astro dev",
-    "demo:astro:build": "pnpm -C playground/astro build",
+    "demo:vue:dev": "pnpm -C playground/vue dev:og",
+    "demo:vue:build": "pnpm -C playground/vue build:og",
+    "demo:astro:dev": "pnpm -C playground/astro dev:og",
+    "demo:astro:build": "pnpm -C playground/astro build:og",
     "gen:vue:svg": "pnpm -C examples/vue-run-esm-script gen:svg",
     "gen:vue:png": "pnpm -C examples/vue-run-esm-script gen:png",
     "gen:astro:svg": "pnpm -C examples/astro-run-esm-script gen:svg",
