feat(playground): initial astro playground

--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "description": "use Vue file to generate Open Graph SVG or PNG by satori. Run script or use CLI",
   "scripts": {
-    "dev": "  x-satori -t ./Template.vue -c ./config.ts --dev",
-    "build": "x-satori -t ./Template.vue -c ./config.ts -o image.svg",
+    "dev:og": "  x-satori -t ./Template.vue -c ./config.ts --dev",
+    "build:og": "x-satori -t ./Template.vue -c ./config.ts -o image.svg",
     "gen:svg": "tsx gen-svg.mts",
     "gen:png": "tsx gen-png.mts"
   },
