--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -11,13 +11,13 @@
     "gen:png": "tsx gen-png.mts"
   },
   "dependencies": {
-    "vue": "^3.4.31"
+    "vue": "^3.4.33"
   },
   "devDependencies": {
     "@resvg/resvg-js": "^2.6.2",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.12",
     "tsx": "^4.16.2",
-    "vite": "^5.3.3",
-    "x-satori": "0.1.5"
+    "vite": "^5.3.4",
+    "x-satori": "^0.2.0"
   }
 }
