chore(script): add post release bump script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "**/.x-cmd/*": "shellscript",
     "**/.x-cmd/*.yml": "yaml",
+    "**/.x-cmd/*.js": "javascript",
+    "**/.x-cmd/*.*ts": "typescript",
     "*.css": "postcss",
     ".czrc": "json",
     "_headers": "properties",
