--- a/examples/astro-run-esm-script/package.json
+++ b/examples/astro-run-esm-script/package.json
@@ -15,6 +15,6 @@
     "@resvg/resvg-js": "^2.6.2",
     "@types/node": "^20.14.12",
     "tsx": "^4.16.2",
-    "x-satori": "0.2.0"
+    "x-satori": "^0.2.0-beta.9"
   }
 }
