--- a/examples/astro-file-endpoint/package.json
+++ b/examples/astro-file-endpoint/package.json
@@ -20,6 +20,6 @@
   "devDependencies": {
     "@resvg/resvg-js": "^2.6.2",
     "jimp": "^0.22.12",
-    "x-satori": "^0.2.0-beta.9"
+    "x-satori": "^0.2.0"
   }
 }
