--- a/examples/vue-vitepress/package.json
+++ b/examples/vue-vitepress/package.json
@@ -11,6 +11,6 @@
     "@types/node": "^20.14.12",
     "jimp": "^0.22.12",
     "vitepress": "^1.3.1",
-    "x-satori": "^0.2.0-beta.9"
+    "x-satori": "^0.2.0"
   }
 }
