--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -18,6 +18,6 @@
     "@types/node": "^20.14.12",
     "tsx": "^4.16.2",
     "vite": "^5.3.4",
-    "x-satori": "^0.2.0-beta.9"
+    "x-satori": "^0.2.0"
   }
 }
