feat(core): Upgrade core dep `satori` to `0.16.2`

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "x-satori",
   "type": "module",
   "version": "0.2.0",
-  "packageManager": "pnpm@9.6.0",
+  "packageManager": "pnpm@10.13.1",
   "description": "use Vue or Astro file to generate SVG image using Satori",
   "author": "Q.Ben Zheng <zhengqbbb@gmail.com> (https://github.com/Zhengqbbb/)",
   "license": "MIT",
@@ -79,33 +79,33 @@
     "cz": "czg"
   },
   "dependencies": {
-    "esbuild": "^0.23.0",
-    "minimist": "^1.2.8",
-    "satori": "^0.10.14",
-    "satori-html": "^0.3.2",
-    "yoga-wasm-web": "^0.3.3"
+    "esbuild": "catalog:core",
+    "minimist": "catalog:core",
+    "satori": "catalog:core",
+    "satori-html": "catalog:core",
+    "yoga-wasm-web": "catalog:core"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.23.2",
-    "@types/minimist": "^1.2.5",
-    "@types/node": "^20.14.12",
-    "astro": "^4.12.2",
-    "bumpp": "^9.4.1",
-    "cpx2": "^7.0.1",
-    "czg": "^1.9.4",
-    "eslint": "^9.7.0",
-    "eslint-plugin-astro": "^1.2.3",
-    "lint-staged": "^15.2.7",
-    "npm-run-all2": "^6.2.2",
-    "pathe": "^1.1.2",
-    "pnpm": "^9.6.0",
-    "resvg-cli": "^2.6.2",
-    "simple-git-hooks": "^2.11.1",
-    "tsup": "^8.2.2",
-    "tsx": "^4.16.2",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.4",
-    "vue": "^3.4.33",
+    "@antfu/eslint-config": "catalog:dev",
+    "@resvg/resvg-js-cli": "catalog:dev",
+    "@types/minimist": "catalog:dev",
+    "@types/node": "catalog:dev",
+    "astro": "catalog:framework",
+    "bumpp": "catalog:dev",
+    "cpx2": "catalog:dev",
+    "czg": "catalog:dev",
+    "eslint": "catalog:dev",
+    "eslint-plugin-astro": "catalog:dev",
+    "lint-staged": "catalog:dev",
+    "npm-run-all2": "catalog:dev",
+    "pathe": "catalog:dev",
+    "pnpm": "catalog:dev",
+    "simple-git-hooks": "catalog:dev",
+    "tsup": "catalog:dev",
+    "tsx": "catalog:dev",
+    "typescript": "catalog:dev",
+    "vite": "catalog:framework",
+    "vue": "catalog:framework",
     "x-satori": "workspace:*"
   },
   "pnpm": {
