--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,32 @@
 packages:
   - examples/**/*
   - playground/**/*
+catalogs:
+  core:
+    esbuild: "^0.25.8"
+    minimist: "^1.2.8"
+    satori: "^0.16.2"
+    satori-html: "^0.3.2"
+    yoga-wasm-web: "^0.3.3"
+  framework:
+    astro: "^5.12.5"
+    vue: "^3.5.18"
+    vite: "^7.0.6"
+  dev:
+    "@antfu/eslint-config": "^5.0.0"
+    "@resvg/resvg-js-cli": "^2.6.2-beta.1"
+    "@types/minimist": "^1.2.5"
+    "@types/node": "^24.1.0"
+    bumpp: "^10.2.1"
+    cpx2: "^8.0.0"
+    eslint: "^9.32.0"
+    eslint-plugin-astro: "^1.3.1"
+    lint-staged: "^16.1.2"
+    npm-run-all2: "^8.0.4"
+    pathe: "^2.0.3"
+    pnpm: "^10.13.1"
+    czg: "^1.12.0"
+    simple-git-hooks: "^2.13.0"
+    tsup: "^8.5.0"
+    tsx: "^4.20.3"
+    typescript: "^5.8.3"
